[MODORDSTOR-416] Add kafka consumer for Holdings Create events with processing logic